v0.9.3  Monday, December 20 2010
  Changes
  +Fixed 100% CPU bug that occurs with certain clipboard data.
  +Fixed list not staying at the top of the list.
  +Added patch that corrects clipboard losing text data when app closes.
  +Added more man page information.
  
v0.9.2  Friday, January 01 2010

  New
  + Danish translation (by Kim Jensen).
  + Czech translation (by Miloš Koutný).
  + French translation (by Vincent Coiffier).
  + Romanian translation (by Ovidiu D. Niţan).

  Changes
  + Modified action execution code.
  + Removed dependency on pthreads.
  + Clear option clears clipboard and primary contents.
  + Use accessor functions instead direct access (by Javier Jardon).
  + Add missing include statements to silence gcc warnings (by Ludwig Nussel).
  + Clipboard sync cannot be enabled unless both copy and primary are enabled.
  + Empty clipboard and primary recovery no longer overwrites contents of other types.
  + Removes newline characters ('\n') from the history menu entries (by Daniel Di Marco).

v0.9.1  Wednesday, March 18 2009

  New
  + Several new translations.
  + Print primary contents command line option.
  + Clipboard and primary synchronization (by Wolfgang Schnerring).
  
  Changes
  + Updated translations.
  + Eliminated redundant disk activity.
  + Control-click patch for actions menu.
  + Selected items are bumped to the top of the history.
  + Improved (once again) new clipboard/primary contents handling.
  + Piping clipboard contents no longer truncates new line character.
  + New Edit Clipboard dialog. Old dialog had strange behavior under different window managers.

v0.9   Thursday, November 20 2008

  New
  + Confirm clear option.
  + Parcellite menu hotkey.
  + Translated .desktop files.
  + Hungarian and turkish translation.
  + Support for managing x-selection (primary).
  + Prevent empty clipboard. Clipboard/Primary contents are backed up and recovered
    if they ever become NULL.
  
  Changes
  + Fixed/updated daemon mode.