@@ -313,10 +313,21 @@ edit_selected(GtkMenuItem *menu_item, gpointer user_data)
 static void
 item_selected(GtkMenuItem *menu_item, glong index)
 {
-  /* Get the text from the right element and set as clipboard */
-  GSList* element = g_slist_nth(history, index);
-  gtk_clipboard_set_text(clipboard, (gchar*)element->data, -1);
-  gtk_clipboard_set_text(primary, (gchar*)element->data, -1);
+    GdkEventButton *b;
+    GdkEvent *event = gtk_get_current_event();
+    GSList* element = g_slist_nth(history, index);
+    if(event->type==GDK_BUTTON_RELEASE) {
+        b = (GdkEventButton *)event;
+        if(3 == b->button) {
+            g_free(element->data);
+            history = g_slist_delete_link(history, element);
+            if (prefs.save_history)
+                save_history();
+        } else {
+            gtk_clipboard_set_text(clipboard, (gchar*)element->data, -1);
+            gtk_clipboard_set_text(primary, (gchar*)element->data, -1);
+        }
+    }
 }
 
 /* Called when Clear is selected from history menu */
