@@ -1,3 +1,8 @@
+  Changes
+  +Created new icon 'parcellite' and added it to install.
+  +Moved newline to after elipsizing (thanks, Christian).
+  +Added right-click delete 01/17/2011
+
 v0.9.3  Monday, December 20 2010
   Changes
   +Fixed 100% CPU bug that occurs with certain clipboard data.
